# cooltt

./: .envrc  .gitignore  .ocamlformat  CITATION.cff  CONTRIBUTORS  CONTRIBUTORS.md  Dockerfile  Dockerfile-deploy  LICENSE  Makefile  README.md  bad.cooltt  blott.opam  cooltt-lib  cooltt.opam  directed_todo.txt  dune  dune-project  explanation.md  flake.nix  format.sh  funtt.opam  index.html  nbe.opam  nbe_lib.opam  normalize_lib.opam  test  test.sh  test2  test3
.direnv/: flake-profile-6ede6b36f8290ec9edb62c74abdedf5556279396  flake-profile-6ede6b36f8290ec9edb62c74abdedf5556279396.rc  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa
.direnv/flake-inputs/: n9476frrh630l4nz2yhmvv32mdm6lnw2-source
.github/workflows/: Dockerfile  README.markdown  base.yml  docker-base.yml  docker.yml  entrypoint.sh  janitor-untagged.yml  ocaml.yml  odoc.yml
coe-notes/: .gitignore  coe.tex  jmsdelim.sty
cooltt/: index.html
cooltt/Basis/: index.html
cooltt/Basis__Bwd/: index.html
cooltt/Basis__DisjointSet/: index.html
cooltt/Basis__LexingUtil/: index.html
cooltt/Basis__ListUtil/: index.html
cooltt/Basis__Monad/: index.html
cooltt/Basis__PersistentTable/: index.html
cooltt/Basis__Pp/: index.html
cooltt/Basis__PpExn/: index.html
cooltt/Basis__StringUtil/: index.html
cooltt/Basis__Symbol/: index.html
cooltt/Basis__SymbolMap/: index.html
cooltt/Basis__Void/: index.html
cooltt/Core/: index.html
cooltt/Core__CodeUnit/: index.html
cooltt/Core__ConcreteSyntax/: index.html
cooltt/Core__ConcreteSyntaxData/: index.html
cooltt/Core__Conversion/: index.html
cooltt/Core__Debug/: index.html
cooltt/Core__Domain/: index.html
cooltt/Core__DomainData/: index.html
cooltt/Core__Driver/: index.html
cooltt/Core__DriverMessage/: index.html
cooltt/Core__ElabBasics/: index.html
cooltt/Core__ElabEnv/: index.html
cooltt/Core__ElabError/: index.html
cooltt/Core__ElabErrorData/: index.html
cooltt/Core__ElabState/: index.html
cooltt/Core__Elaborator/: index.html
cooltt/Core__Grammar/: index.html
cooltt/Core__Ident/: index.html
cooltt/Core__Lex/: index.html
cooltt/Core__Load/: index.html
cooltt/Core__Log/: index.html
cooltt/Core__Monads/: index.html
cooltt/Core__Namespace/: index.html
cooltt/Core__Quote/: index.html
cooltt/Core__RefineEnv/: index.html
cooltt/Core__RefineError/: index.html
cooltt/Core__RefineErrorData/: index.html
cooltt/Core__RefineMonad/: index.html
cooltt/Core__RefineState/: index.html
cooltt/Core__Refiner/: index.html
cooltt/Core__Semantics/: index.html
cooltt/Core__Serialize/: index.html
cooltt/Core__Splice/: index.html
cooltt/Core__Syntax/: index.html
cooltt/Core__SyntaxData/: index.html
cooltt/Core__SyntaxPrecedence/: index.html
cooltt/Core__Tactic/: index.html
cooltt/Core__TermBuilder/: index.html
cooltt/Core__Veil/: index.html
cooltt/Cubical/: index.html
cooltt/Cubical__/: index.html
cooltt/Cubical__Cof/: index.html
cooltt/Cubical__CofThy/: index.html
cooltt/Cubical__CofThyData/: index.html
cooltt/Cubical__Dim/: index.html
cooltt/Cubical__DimProbe/: index.html
cooltt/Frontend/: index.html
cooltt/Frontend__ConcreteSyntax/: index.html
cooltt/Frontend__ConcreteSyntaxData/: index.html
cooltt/Frontend__Driver/: index.html
cooltt/Frontend__DriverMessage/: index.html
cooltt/Frontend__ElabError/: index.html
cooltt/Frontend__Elaborator/: index.html
cooltt/Frontend__Grammar/: index.html
cooltt/Frontend__Lex/: index.html
cooltt/Frontend__Load/: index.html
cooltt/Frontend__Tactics/: index.html
doc/: .gitignore  article-macros.sty  ebproof.sty  favonia-symbols.sty  ic-design.md  jmsdelim.sty  jon-ebproof.sty  jon-note.sty  jon-tikz.sty  jon-todo.sty  kan.tex  macros.sty  refs.bib
dream-tests/: path-types.cooltt
emacs/: cooltt-lsp.el  cooltt.el
src/: nbe.ml  nbe.mli
src/basis/: Bwd.ml  Bwd.mli  DisjointSet.ml  DisjointSet.mli  JobQueue.ml  JobQueue.mli  LexingUtil.ml  LexingUtil.mli  ListUtil.ml  ListUtil.mli  Monad.ml  Monad.mli  Monoid.mli  OptionUtil.ml  OptionUtil.mli  PersistentTable.ml  PersistentTable.mli  Pp.ml  Pp.mli  PpExn.ml  PpExn.mli  SegmentTree.ml  SegmentTree.mli  SizedList.ml  SizedList.mli  StringUtil.ml  StringUtil.mli  Symbol.ml  Symbol.mli  SymbolMap.ml  SymbolMap.mli  SymbolTable.ml  SymbolTable.mli  SysUtil.ml  SysUtil.mli  Vec.ml  Vec.mli  Void.ml  Void.mli  dune
src/core/: CodeUnit.ml  CodeUnit.mli  CofBuilder.ml  CofThy.ml  CofVar.ml  CofVar.mli  Conversion.ml  Conversion.mli  DDim.ml  DDim.mli  Debug.ml  Debug.mli  Dim.ml  Dim.mli  DimProbe.ml  DimProbe.mli  Domain.ml  Domain.mli  DomainData.ml  ElabBasics.ml  (+55 more)
src/cubical/: Cof.ml  Cof.mli  CofThy.cppo.ml  CofThy.ml  CofThy.mli  CofThyData.ml  DDim.ml  DDim.mli  Dim.ml  Dim.mli  DimProbe.ml  Z3Basis.ml  Z3BoolSolver.ml  Z3ClassicalBoolSolverWithIntAsDim.ml  Z3ClassicalBoolSolverWithUninterpretedDim.ml  Z3ClassicalMonad.ml  Z3CofThy.ml  Z3CofThy.mli  Z3IntMonad.ml  Z3IntSolver.ml  Z3Monad.ml  Z3Monad.mli  Z3RealSolver.ml  Z3Solver.ml  Z3Solver.mli  Z3Solvers.ml  Z3Solvers.mli  cubical.ml  cubical.mli  dune
src/frontend/: ConcreteSyntax.mli  ConcreteSyntaxData.ml  Driver.ml  Driver.mli  DriverMessage.ml  DriverMessage.mli  ElabError.ml  ElabError.mli  Elaborator.ml  Elaborator.mli  Grammar.mly  Lex.mll  Load.ml  Load.mli  Server.ml  Server.mli  Tactics.ml  Tactics.mli  dune
test/: README.md  Test.ml  abstract.cooltt  algebra.cooltt  axiom.cooltt  base-types.cooltt  boxed-eq.blott  bruno.cooltt  circle.cooltt  coercion.cooltt  com.cooltt  const-nat.blott  cool-total-space.cooltt  cooltt-lib  directed.cooltt  dune  elab.cooltt  eq.blott  eq.cooltt  equation.cooltt  equiv.cooltt  evan.cooltt  export.cooltt  fib.blott  fib.cooltt  force.blott  groupoid-laws.cooltt  hcom-type.cooltt  hlevel.cooltt  holes.cooltt  id.blott  import.cooltt  inequality.cooltt  isos.cooltt  misc.blott  monoid.cooltt  names.cooltt  nat-path.cooltt  nat.cooltt  not-expand.blott  (+24 more)
unit-test/: Framework.ml  Framework.mli  Inductives.ml  Records.ml  dune
vim/: README.md  install.sh
zsh/: README.md  _cooltt
(+467 files in other folders)
