opam-version: "2.0"
name: "blott"
version: "0.0"
maintainer: "danny.gratzer@gmail.com"
authors: ["Daniel Gratzer"]
homepage: "https://github.com/jozefg/nbe-for-guarded-mltt"
bug-reports: "https://github.com/jozefg/nbe-for-guarded-mltt/issues"
dev-repo: "git+https://github.com/jozefg/nbe-for-guarded-mltt.git"
license: "MIT"
depends: [
  "dune"  {build}
  "cmdliner" {= "1.0.2"}
  "normalize_lib"
]
build: [
  [make]
]
