opam-version: "2.0"
name: "blott"
version: "0.0"
maintainer: "Daniel Gratzer <gratzer@cs.au.dk>"
authors: ["Daniel Gratzer"]
homepage: "https://github.com/jozefg/blott"
bug-reports: "https://github.com/jozefg/blott/issues"
dev-repo: "git+https://github.com/jozefg/blott.git"
license: "MIT"
depends: [
  "dune"  {build}
  "cmdliner" {>= "1.0" & < "1.1"}
]
build: [
  [make]
]
