opam-version: "2.0"
name: "funtt"
version: "0.0"
maintainer: "Daniel Gratzer <gratzer@cs.au.dk>"
authors: ["Daniel Gratzer" "Jonathan Sterling"]
homepage: "https://github.com/jozefg/funtt"
bug-reports: "https://github.com/jozefg/funtt/issues"
dev-repo: "git+https://github.com/jozefg/funtt.git"
synopsis: "Experimental implementation of Modal Dependent Type Theory"
license: "MIT"
depends: [
  "dune"  {build}
  "ppx_deriving" {> "4.0"}
  "cmdliner" {>= "1.0" & < "1.1"}
  "menhir" {>= "20180703"}
]
build: [["dune" "build" "-p" name "-j" jobs]]
