opam-version: "1.2.2"
name: "nbe"
version: "0.0"
maintainer: "danny.gratzer@gmail.com"
authors: ["Danny Gratzer"]
homepage: "https://github.com/jozefg/nbe-for-mltt"
bug-reports: "https://github.com/jozefg/nbe-for-mltt/issues"
dev-repo: "https://github.com/jozefg/nbe-for-mltt.git"
license: "MIT"
depends: [
  "jbuilder" {build & > "1.0+beta17"}
  "sexplib" {= "0.11.0"}
  "cmdliner" {>= "1.0" & < "1.1"}
  "topkg" {= "0.9.1"}
]
build: [
  [make]
]
