opam-version: "1.2.2"
name: "normalize_lib"
version: "0.0"
maintainer: "Daniel Gratzer"
authors: ["Daniel Gratzer"]
homepage: "https://github.com/jozefg/nbe-for-guarded-mltt"
bug-reports: "https://github.com/jozefg/nbe-for-guarded-mltt/issues"
license: "MIT"
dev-repo: "https://github.com/jozefg/nbe-for-guarded-mltt"
build: [
  ["dune" "build" "--only-packages" name
   "--root" "." "-j" jobs "@install"]
]
depends: [
  "sexplib" {= "0.11.0"}
]
available: ocaml-version >= "4.06.1"
