opam-version: "2.0"
name: "normalize_lib"
version: "0.0"
maintainer: "Daniel Gratzer"
authors: ["Daniel Gratzer"]
homepage: "https://github.com/jozefg/nbe-for-guarded-mltt"
bug-reports: "https://github.com/jozefg/nbe-for-guarded-mltt/issues"
license: "MIT"
dev-repo: "git+https://github.com/jozefg/nbe-for-guarded-mltt"
build: [
  ["dune" "build" "--only-packages" name
   "--root" "." "-j" jobs "@install"]
]
depends: [
  "dune"  {build}
  "sexplib" {= "0.11.0"}
  "menhir" {>= "20180703"}
]
