opam-version: "2.0"
name: "normalize_lib"
version: "0.0"
maintainer: "Daniel Gratzer <gratzer@cs.au.dk>"
authors: ["Daniel Gratzer"]
homepage: "https://github.com/jozefg/blott"
bug-reports: "https://github.com/jozefg/blott/issues"
license: "MIT"
dev-repo: "git+https://github.com/jozefg/blott"
build: [
  ["dune" "build" "--only-packages" name
   "--root" "." "-j" jobs "@install"]
]
depends: [
  "dune"  {build}
  "menhir" {>= "20180703"}
  "ppx_deriving" {>= "4.2"}
]
