(executables
 (names test)
 (libraries cooltt.frontend))

(rule
 (target test.output)
 (deps test.exe
       (glob_files ./*.cooltt)
       (glob_files ./cooltt-lib)
       )
 (action (bash "./test.exe | tee test.output")))

(rule
 (alias runtest)
 (action
   (progn (bash "rm ./*.cooltt")
          (diff test.expected test.output))))
